--- a/.github/workflows/dyno.yml
+++ b/.github/workflows/dyno.yml
@@ -36,7 +36,7 @@ jobs:
   test2:
     runs-on: ubuntu-latest
     container:
-      image: internetarchive/dyno@latest
+      image: ghcr.io/internetarchive/dyno:main
     steps:
     - name: Setup repo
       uses: actions/checkout@v2
