--- a/.github/workflows/dyno.yml
+++ b/.github/workflows/dyno.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       # xxx instead use branch name and tag for current pipeline
-      image: ghcr.io/internetarchive/dyno:main
+      image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@latest
     steps:
     - name: Setup repo
       uses: actions/checkout@v2
