--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -104,7 +104,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       # xxx instead use branch name and tag for current pipeline
-      image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.GITHUB_REF_NAME }}@${{ env.GITHUB_SHA }}
+      # image: ghcr.io/${{ github.repository }}:${{ env.GITHUB_REF_NAME }}@${{ env.GITHUB_SHA }}
+      image: ghcr.io/${{ github.repository }}:${{ env.GITHUB_REF_NAME }}
     steps:
     - name: Setup repo
       uses: actions/checkout@v2
