--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -103,9 +103,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     container:
-      # xxx instead use branch name and tag for current pipeline
-      # image: ghcr.io/${{ github.repository }}:${{ env.GITHUB_REF_NAME }}@${{ env.GITHUB_SHA }}
-      image: ghcr.io/${{ github.repository }}:${{ env.GITHUB_REF_NAME }}
+      image: ghcr.io/${{ github.repository }}:${GITHUB_REF_NAME}@${GITHUB_SHA}
     steps:
     - name: Setup repo
       uses: actions/checkout@v2
@@ -120,8 +118,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     container:
-      # xxx instead use branch name and tag for current pipeline
-      image: ghcr.io/internetarchive/dyno:main
+      image: ghcr.io/${{ github.repository }}:${GITHUB_REF_NAME}@${GITHUB_SHA}
     steps:
     - name: Setup repo
       uses: actions/checkout@v2
