env vars getting right

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -103,7 +103,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/${{ github.repository }}:${GITHUB_REF_NAME}@${GITHUB_SHA}
+      image: ghcr.io/${{ github.repository }}:${{ github.ref_name }}@sha256:${{ github.sha }}
     steps:
     - name: Setup repo
       uses: actions/checkout@v2
@@ -118,7 +118,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/${{ github.repository }}:${{ github.ref_name }}@${{ github.sha }}
+      image: ghcr.io/${{ github.repository }}:${{ github.ref_name }}@sha256:${{ github.sha }}
     steps:
     - name: Setup repo
       uses: actions/checkout@v2
