--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -131,5 +131,7 @@ jobs:
     container:
       image: registry.gitlab.com/internetarchive/nomad/master
     steps:
-    - run: export NOMAD_ADDR=${{ secrets.NOMAD_ADDR }}  KUBE_INGRESS_BASE_DOMAIN=${{ secrets.KUBE_INGRESS_BASE_DOMAIN }}
-    - run: /deploy.sh
+    - env:
+        NOMAD_ADDR: ${{ secrets.NOMAD_ADDR }}
+        KUBE_INGRESS_BASE_DOMAIN: ${{ secrets.KUBE_INGRESS_BASE_DOMAIN }}
+      run: export NOMAD_ADDR=${{ secrets.NOMAD_ADDR }}  KUBE_INGRESS_BASE_DOMAIN=${{ secrets.KUBE_INGRESS_BASE_DOMAIN }}  &&  /deploy.sh
