should be able to submit job to nomad now, methinks!

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -133,5 +133,7 @@ jobs:
     steps:
     - env:
         NOMAD_ADDR: ${{ secrets.NOMAD_ADDR }}
+        NOMAD_TOKEN: ${{ secrets.NOMAD_TOKEN }}
         KUBE_INGRESS_BASE_DOMAIN: ${{ secrets.KUBE_INGRESS_BASE_DOMAIN }}
-      run: export NOMAD_ADDR=${{ secrets.NOMAD_ADDR }}  KUBE_INGRESS_BASE_DOMAIN=${{ secrets.KUBE_INGRESS_BASE_DOMAIN }}  &&  /deploy.sh
+      run: /deploy.sh
+      # run: export NOMAD_ADDR=${{ secrets.NOMAD_ADDR }}  KUBE_INGRESS_BASE_DOMAIN=${{ secrets.KUBE_INGRESS_BASE_DOMAIN }}  &&  /deploy.sh
