--- a/example.yml
+++ b/example.yml
@@ -6,6 +6,10 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+       contents: read
+       packages: write
+       id-token: write
     steps:
       # https://github.com/internetarchive/build/blob/main/action.yml
       - uses: internetarchive/build@v1
