hmm, token docs issues?

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: internetarchive/build@v1
         with:
-          regpw: ${{ secrets.GHCR_TOKEN }}
+          regpw: ${{ secrets.GITHUB_TOKEN }}
 
 
   # This workflow uses a `deno` binary along with `eslint` for code linting, and (optional) testing.
