--- a/example.yml
+++ b/example.yml
@@ -23,9 +23,9 @@ jobs:
       image: registry.gitlab.com/internetarchive/nomad/master
     steps:
     - env:
-        NOMAD_ADDR: ${{ secrets.NOMAD_ADDR }}
+        BASE_DOMAIN: dev.archive.org
+        NOMAD_ADDR: https://nom.us.archive.org:4646
         NOMAD_TOKEN: ${{ secrets.NOMAD_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        KUBE_INGRESS_BASE_DOMAIN: ${{ secrets.KUBE_INGRESS_BASE_DOMAIN }}
       # https://gitlab.com/internetarchive/nomad/-/blob/master/deploy.sh
       run: /deploy.sh
