--- a/example.yml
+++ b/example.yml
@@ -1,5 +1,5 @@
-# Minimal CI/CD - copy this into your repo in .github/workflows/ subdir.
-# https://github.com/internetarchive/dyno/blob/main/.github/workflows/cicd.yml  shows [test] jobs
+# Minimal CI/CD with separate jobs and custom test jobs.
+# Copy this into your repo in .github/workflows/ subdir & tailor as needed
 name: CICD
 on: push
 
@@ -21,7 +21,6 @@ jobs:
   #
   # NOTE: robotic image construction would be:
   #   image: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
-
   lint:
     needs: [build]
     runs-on: ubuntu-latest
