var name changes; can drop newly optional var; dox++; dropped now older example.yml in favor of links to repo doing advanced custom pipeline

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,8 +16,6 @@ jobs:
       - uses: internetarchive/cicd@v1
         with:
           BASE_DOMAIN: 'dev.archive.org'
-          NOMAD_ADDR: 'https://nom.us.archive.org:4646'
           NOMAD_TOKEN: ${{ secrets.NOMAD_TOKEN }}
-          NOMAD_PROD: ${{ secrets.NOMAD_PROD }}
+          NOMAD_TOKEN_PROD: ${{ secrets.NOMAD_TOKEN_PROD }}
           REGISTRY_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         TEST_IMAGE: 'ghcr.io/internetarchive/dyno:main'
