--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,10 +8,7 @@ on: push
 jobs:
   cicd:
     runs-on: ubuntu-latest
-    permissions:
-       contents: read
-       packages: write
-       id-token: write
+    permissions: { contents: read, packages: write, id-token: write }
     steps:
       - uses: internetarchive/cicd@v1
         with:
