updated like `eslint` repo: update to eslint v8; `lint` script optional CLI files/dirs args; av repp `deno lint` ignores pulled; `globalThis` is cool.  dont bother dummy deploying

--- a/deno.json
+++ b/deno.json
@@ -1,25 +1,14 @@
 {
   "lint": {
-    "files": {
-      "exclude": [
-        "node_modules",
-        "web_modules",
+    "exclude": [
+      "node_modules",
+      "web_modules",
 
-        "www/jw/8",
-        "www/js/util/datamaps.js",
-        "www/js/util/sortnat.js",
-        "test/captions",
-        "test/identify",
-        "identify",
-
-        "/av/www/jw/8",
-        "/av/www/js/util/datamaps.js",
-        "/av/www/js/util/sortnat.js",
-
-        "/app/www/jw/8/",
-        "/app/www/js/util/sortnat.js"
-      ]
-    },
+      "www/jw/8",
+      "test/captions",
+      "test/identify",
+      "identify"
+    ],
     "rules": {
       "tags": ["recommended"],
       "exclude": [
