--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,3 +16,4 @@ jobs:
           NOMAD_TOKEN: ${{ secrets.NOMAD_TOKEN }}
           NOMAD_TOKEN_PROD: ${{ secrets.NOMAD_TOKEN_PROD }}
           REGISTRY_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NOMAD_VAR_NO_DEPLOY: 'true'
