--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,29 +1,8 @@
-# This only does a (multi-architecture) [build]
+# This does a (multi-architecture) [build]
 # @see README.md for full CI/CD pipeline examples.
 
-name: CICD
 on: push
 jobs:
-  build-for-linux-and-mac-arm:
-    runs-on: ubuntu-latest
-    permissions: { contents: read, packages: write, id-token: write }
-    steps:
-      - uses: internetarchive/build@v1
-        with:
-          REGISTRY_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
-
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ghcr.io/${{ github.repository }}:${{ steps.extract_branch.outputs.branch }}
+  cicd:
+    # https://github.com/internetarchive/cicd
+    uses: internetarchive/cicd/.github/workflows/cicd-multi-arch.yml@main
